# regicide

./: README.md  pyproject.toml
regicide/: __init__.py  agent.py  cli.py  engine.py
regicide/agent_context/: rules.txt  strategy.txt
tests/: test_engine.py  test_ollama_connection.py
