[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "regicide-solo"
version = "0.1.0"
description = "A simple Python engine and text CLI for solo Regicide."
requires-python = ">=3.10"

[project.scripts]
regicide-solo = "regicide.cli:main"
regicide-agent = "regicide.agent:main"
